add first sources

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,19 +2,25 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Test page</title>
-    
-    <!-- include kotlin runtime (run mvn package to get it there) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- include kotlin runtime -->
     <script type="text/javascript" src="lib/kotlin.js"></script>
-    
-    <!-- your compiled script (run mvn compile to get it up to date) -->
-    <!-- see src/main/kotlin/org/olafneumann/Hello.kt for implementation -->
-    <script type="text/javascript" src="group-randomizer.js"></script>
+    <script type="text/javascript" src="lib/kotlinx-html-js.js"></script>
 
     <title>Group Randomizer</title>
 </head>
 
 <body>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <!-- sources of regex generator -->
+    <script type="text/javascript" src="group-randomizer.js"></script>
 </body>
 
 </html>
