--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- include kotlin runtime -->
     <script type="text/javascript" src="lib/kotlin.js"></script>
@@ -11,15 +16,151 @@
     <title>Group Randomizer</title>
 </head>
 
-<body>
+<body class="bg-dark">
+    <div class="container-fluid py-3" id="rg_mainContainer">
+        <div id="ck_container_cookie" class="alert alert-danger fixed-top m-2" role="alert">
+            <div class="d-flex justify-content-between">
+                <p class="m-0">This site uses cookies to improve your user experience.</p>
+                <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                    <button id="ck_btn_reject" type="button" class="btn btn-danger">Reject</button>
+                    <button id="ck_btn_accept" type="button" class="btn btn-success">Accept</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="jumbotron bg-info">
+            <h1 class="display-4"><span id="rg-title">Group Randomizer</span></h1>
+            <!--<p class="lead d-none d-sm-block">Creating <em>regular expressions</em> is easy again!</p>-->
+        </div>
+
+        <div class="row no-gutters bg-light mt-3 pr-4 rounded position-relative" id="rg_input_container">
+            <div class="col-sm-1 p-4 d-none d-sm-none d-md-block text-center">
+                <h3 class="display-3 text-secondary">1</h3>
+            </div>
+            <div class="col-12 col-md-11 py-4 pl-4">
+                <div class="d-flex justify-content-between">
+                    <h5>Select a group.</h5>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h6>Group content</h6>
+                        <div class="list-group">
+                            <div class="list-group-item list-group-item-action d-flex justify-content-between">
+                                <div class="mr-2">First Name</div>
+                                <span class="badge badge-success badge-pill">&#10003;</span>
+                            </div>
+                            <div class="list-group-item list-group-item-action d-flex justify-content-between">
+                                <div class="mr-2">Second Name</div>
+                                <span class="badge badge-danger badge-pill">&#10005;</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <h6>Existing groups</h6>
+
+                        <div class="list-group">
+                            <button type="button"
+                                class="list-group-item list-group-item-action d-flex justify-content-between">
+                                Enterprise Intergration Platform
+                                <span class="badge badge-primary badge-pill ml-2">8</span>
+                            </button>
+                            <button type="button"
+                                class="list-group-item list-group-item-action d-flex justify-content-between">FIS
+                                Platform Services
+                                <span class="badge badge-primary badge-pill ml-2">7</span></button>
+                            <a href="#" class="list-group-item list-group-item-action bg-secondary text-light">
+                                Create new group
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <small class="form-text text-muted">Select the group members that shall be part of the generated random
+                    text.</small>
+            </div>
+        </div>
+
+        <div class="row no-gutters bg-light mt-3 pr-4 rounded position-relative" id="rg_input_container">
+            <div class="col-sm-1 p-4 d-none d-sm-none d-md-block text-center">
+                <h3 class="display-3 text-secondary">2</h3>
+            </div>
+            <div class="col-12 col-md-11 py-4 pl-4">
+                <div class="d-flex justify-content-between">
+                    <h5>Choose text additions.</h5>
+                </div>
+                Content to be provided.
+            </div>
+        </div>
+
+
+        <div class="row no-gutters bg-light mt-3 pr-4 rounded position-relative" id="rg_input_container">
+            <div class="col-sm-1 p-4 d-none d-sm-none d-md-block text-center">
+                <h3 class="display-3 text-secondary">3</h3>
+            </div>
+            <div class="col-12 col-md-11 py-4 pl-4">
+                <div class="d-flex justify-content-between">
+                    <h5>Have your group.</h5>
+                </div>
+                Content to be provided.
+            </div>
+        </div>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-    <!-- sources of regex generator -->
+
+
+
+        <!-- Footer -->
+        <footer
+            class="page-footer font-small row no-gutters bg-dark text-muted border border-secondary mt-4 p-4 rounded">
+            <h5 class="text-uppercase" style="width: 100%">Group Randomizer</h5>
+            <div class="text-center text-md-left collapse show" id="footerContent">
+                <div class="row">
+                    <div class="col-md-6 mt-md-0 mt-3">
+                        <p>This page is intended to provide a very simple randomizer to find a sort order for your daily
+                            stand up meeting.
+                        </p>
+                        <p>Find the project sources at <a href="https://github.com/noxone/group-randomizer"
+                                target="_blank">Github</a>
+                        </p>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none pb-3 border-secondary">
+                    <div class="col-md-3 mb-md-0 mb-3">
+                        <h5>Some content</h5>
+                        <ul class="list-unstyled">
+                            <li>Here</li>
+                            <li>And here</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 mb-md-0 mb-3">
+                        <h5>This project is built using</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="https://kotlinlang.org/" target="_blank">Kotlin</a></li>
+                            <li><a href="https://getbootstrap.com" target="_blank">Bootstrap</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="text-center pt-3">
+                &copy; 2020 Copyright <a href="https://github.com/noxone/" target="_blank">Olaf Neumann</a>
+            </div>
+        </footer>
+
+    </div> <!-- container -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+    <!-- sources of group randomizer -->
     <script type="text/javascript" src="group-randomizer.js"></script>
 </body>
 
