better group storing

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -50,20 +50,26 @@
                                 Enterprise Intergration Platform
                                 <span class="badge badge-primary badge-pill ml-2">8</span>
                             </button>
-                            <button type="button"
+                            <div type="button"
                                 class="list-group-item list-group-item-action d-flex justify-content-between">FIS
                                 Platform Services
-                                <span class="badge badge-primary badge-pill ml-2">7</span></button>
+                                <div>
+                                    <a class="mr-1">X</a>
+                                    <span class="badge badge-primary badge-pill ml-2">7</span>
+                                </div>
+                            </div>
                             <form class="list-group-item list-group-item-action bg-secondary text-light">
                                 <div class="form-row">
                                     <div class="mr-1">
-                                        <input id="gr_new_group_name" type="text" placeholder="Group name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <input id="gr_new_group_name" type="text" placeholder="Group name"
+                                            class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
                                     <div class="col">
-                                        <button id="gr_create_new_group" type="button" class="btn btn-info">Create</button>
+                                        <button id="gr_create_new_group" type="button"
+                                            class="btn btn-info">Create</button>
                                     </div>
-                                  </div>                                
-                              </form>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <div>
@@ -117,10 +123,11 @@
                             <form class="list-group-item list-group-item-action">
                                 <div class="form-row">
                                     <div class="mr-1">
-                                        <input type="text" placeholder="Custom beginning" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <input type="text" placeholder="Custom beginning" class="form-control"
+                                            id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
-                                  </div>                                
-                              </form>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <div>
@@ -138,10 +145,11 @@
                             <form class="list-group-item list-group-item-action">
                                 <div class="form-row">
                                     <div class="mr-1">
-                                        <input type="text" placeholder="Custom divider" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <input type="text" placeholder="Custom divider" class="form-control"
+                                            id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
-                                  </div>                                
-                              </form>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <div>
@@ -156,10 +164,11 @@
                             <form class="list-group-item list-group-item-action">
                                 <div class="form-row">
                                     <div class="mr-1">
-                                        <input type="text" placeholder="Custom ending" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <input type="text" placeholder="Custom ending" class="form-control"
+                                            id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
-                                  </div>                                
-                              </form>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
