--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -13,6 +13,8 @@
     <script type="text/javascript" src="lib/kotlin.js"></script>
     <script type="text/javascript" src="lib/kotlinx-html-js.js"></script>
 
+    <link rel="stylesheet" href="group-randomizer.css">
+
     <title>Group Randomizer</title>
 </head>
 
@@ -46,9 +48,12 @@
                         <h6>Groups</h6>
                         <div class="list-group" id="gr_existing_groups">
                             <button type="button"
-                                class="list-group-item list-group-item-action d-flex justify-content-between">
+                                class="list-group-item list-group-item-action d-flex justify-content-between gr-delete-link-container">
                                 Enterprise Intergration Platform
-                                <span class="badge badge-primary badge-pill ml-2">8</span>
+                                <div class="ml-2">
+                                    <a class="gr-delete-link" onclick="javascript:alert('hallo')">abcd</a>
+                                    <span class="badge badge-primary badge-pill ml-2">8</span>
+                                </div>
                             </button>
                             <div type="button"
                                 class="list-group-item list-group-item-action d-flex justify-content-between">FIS
@@ -58,7 +63,7 @@
                                     <span class="badge badge-primary badge-pill ml-2">7</span>
                                 </div>
                             </div>
-                            <form class="list-group-item list-group-item-action bg-secondary text-light">
+                            <div class="list-group-item list-group-item-action bg-secondary text-light gr-allways-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input id="gr_new_group_name" type="text" placeholder="Group name"
@@ -69,7 +74,7 @@
                                             class="btn btn-info">Create</button>
                                     </div>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                     <div>
@@ -86,13 +91,14 @@
                             <form class="list-group-item list-group-item-action bg-secondary text-light">
                                 <div class="form-row">
                                     <div class="mr-1">
-                                        <input id="gr_new_member_name" type="text" placeholder="Member name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        <input id="gr_new_member_name" type="text" placeholder="Member name"
+                                            class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
                                     <div class="col">
                                         <button id="gr_add_group_member" type="button" class="btn btn-info">Add</button>
                                     </div>
-                                  </div>                                
-                              </form>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
