--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -88,7 +88,7 @@
                                 <div class="ml-2">Second Name</div>
                                 <span class="badge badge-danger badge-pill">&#10005;</span>
                             </button>
-                            <form class="list-group-item list-group-item-action bg-secondary text-light">
+                            <div class="list-group-item list-group-item-action bg-secondary text-light gr-allways-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input id="gr_new_member_name" type="text" placeholder="Member name"
@@ -98,7 +98,7 @@
                                         <button id="gr_add_group_member" type="button" class="btn btn-info">Add</button>
                                     </div>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
