--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -47,23 +47,9 @@
                     <div>
                         <h6>Groups</h6>
                         <div class="list-group" id="gr_existing_groups">
-                            <button type="button"
-                                class="list-group-item list-group-item-action d-flex justify-content-between gr-delete-link-container">
-                                Enterprise Intergration Platform
-                                <div class="ml-2">
-                                    <a class="gr-delete-link" onclick="javascript:alert('hallo')">abcd</a>
-                                    <span class="badge badge-primary badge-pill ml-2">8</span>
-                                </div>
-                            </button>
-                            <div type="button"
-                                class="list-group-item list-group-item-action d-flex justify-content-between">FIS
-                                Platform Services
-                                <div>
-                                    <a class="mr-1">X</a>
-                                    <span class="badge badge-primary badge-pill ml-2">7</span>
-                                </div>
-                            </div>
-                            <div class="list-group-item list-group-item-action bg-secondary text-light gr-allways-there">
+                            <form id="gr_add_group_form"
+                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there"
+                                action="#">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input id="gr_new_group_name" type="text" placeholder="Group name"
@@ -74,21 +60,14 @@
                                             class="btn btn-info">Create</button>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                     <div>
                         <h6>Group members</h6>
                         <div class="list-group" id="gr_existing_members">
-                            <button class="list-group-item list-group-item-action d-flex justify-content-between">
-                                First Name
-                                <span class="badge badge-success badge-pill ml-2">&#10003;</span>
-                            </button>
-                            <button class="list-group-item list-group-item-action d-flex justify-content-between">
-                                <div class="ml-2">Second Name</div>
-                                <span class="badge badge-danger badge-pill">&#10005;</span>
-                            </button>
-                            <div class="list-group-item list-group-item-action bg-secondary text-light gr-allways-there">
+                            <form id="gr_add_member_form"
+                                class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input id="gr_new_member_name" type="text" placeholder="Member name"
@@ -98,7 +77,7 @@
                                         <button id="gr_add_group_member" type="button" class="btn btn-info">Add</button>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -126,7 +105,7 @@
                             <button class="list-group-item list-group-item-action d-flex justify-content-between">
                                 <div class="ml-2">Heute: </div>
                             </button>
-                            <form class="list-group-item list-group-item-action">
+                            <form class="list-group-item list-group-item-action gr-always-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input type="text" placeholder="Custom beginning" class="form-control"
@@ -148,7 +127,7 @@
                             <button class="list-group-item list-group-item-action d-flex justify-content-between">
                                 <div class="ml-2">:</div>
                             </button>
-                            <form class="list-group-item list-group-item-action">
+                            <form class="list-group-item list-group-item-action gr-always-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input type="text" placeholder="Custom divider" class="form-control"
@@ -167,7 +146,7 @@
                             <button class="list-group-item list-group-item-action">
                                 <div class="ml-2">.</div>
                             </button>
-                            <form class="list-group-item list-group-item-action">
+                            <form class="list-group-item list-group-item-action gr-always-there">
                                 <div class="form-row">
                                     <div class="mr-1">
                                         <input type="text" placeholder="Custom ending" class="form-control"
@@ -190,7 +169,10 @@
                 <div class="d-flex justify-content-between">
                     <h5>Have your group.</h5>
                 </div>
-                <div id="gr_result_text" class="p-3 rounded border bg-white text-dark">This should be your result.</div>
+                <div id="gr_result_text" class="p-3 rounded border bg-white text-dark d-flex justify-content-between">
+                    This should be your result.
+                    <button>Randomize</button>
+                </div>
             </div>
         </div>
 
