--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -169,8 +169,11 @@
                 <div class="d-flex justify-content-between">
                     <h5>Have your group.</h5>
                 </div>
-                <div id="gr_result_text" class="p-3 rounded border bg-white text-dark d-flex justify-content-between">
-                    This should be your result.
+                <div class="d-flex justify-content-between">
+                    <div id="gr_result_text" class="p-3 rounded border bg-white text-dark">
+                        This should be your result.
+
+                    </div>
                     <button>Randomize</button>
                 </div>
             </div>
