Change button appearance

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -168,13 +168,16 @@
             <div class="col-12 col-md-11 py-4 pl-4">
                 <div class="d-flex justify-content-between">
                     <h5>Have your group.</h5>
+                    <div>
+                        <button id="gr_btn_regenerate" class="btn btn-primary" title="Regenerate a random order">&#128472;</button>
+                        <button id="gr_btn_copy" class="btn btn-primary" title="Copy to clipboard">&#128203;</button>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div id="gr_result_text" class="p-3 rounded border bg-white text-dark">
                         This should be your result.
 
                     </div>
-                    <button class="btn btn-primary">Randomize</button>
                 </div>
             </div>
         </div>
