Improve member design

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -65,9 +65,11 @@
                     </div>
                     <div class="col-xl-8 col-lg-7 col-md-6 mt-2">
                         <h6>Group members</h6>
-                        <div class="list-group" id="gr_existing_members">
+                        <div class="list-group">
                             <div class="list-group-item">
-                                No members yet
+                                <div id="gr_existing_members" class="row">
+
+                                </div>
                             </div>
                             <form id="gr_add_member_form"
                                 class="list-group-item list-group-item-action bg-secondary text-light gr-always-there">
