--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -32,7 +32,6 @@
 
         <div class="jumbotron bg-info">
             <h1 class="display-4"><span id="rg-title">Group Randomizer</span></h1>
-            <!--<p class="lead d-none d-sm-block">Creating <em>regular expressions</em> is easy again!</p>-->
         </div>
 
         <div class="row no-gutters bg-light mt-3 pr-4 rounded position-relative" id="rg_input_container">
@@ -42,6 +41,9 @@
             <div class="col-12 col-md-11 py-4 pl-4">
                 <div class="d-flex justify-content-between">
                     <h5>Select a group.</h5>
+                    <div>
+                        <button class="btn btn-primary gr-copy-button" title="Copy randomized data to clipboard">&#128203;</button>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-lg-5 col-md-6 mt-2">
@@ -79,7 +81,8 @@
                                             class="form-control">
                                     </div>
                                     <div class="col-xl-2 col-lg-3 col-md-5 col-5">
-                                        <button id="gr_add_group_member" type="button" class="btn btn-info" style="width:100%">Add</button>
+                                        <button id="gr_add_group_member" type="button" class="btn btn-info"
+                                            style="width:100%">Add</button>
                                     </div>
                                 </div>
                             </form>
@@ -161,13 +164,12 @@
                     <div>
                         <button id="gr_btn_regenerate" class="btn btn-primary"
                             title="Regenerate a random order">&#128472;</button>
-                        <button id="gr_btn_copy" class="btn btn-primary" title="Copy to clipboard">&#128203;</button>
+                        <button class="btn btn-primary gr-copy-button" title="Copy randomized data to clipboard">&#128203;</button>
                     </div>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div id="gr_result_text" class="p-3 rounded border bg-white text-dark">
                         This should be your result.
-
                     </div>
                 </div>
             </div>
